updating all files and adding zip file for large csv

--- a/ETL Walkthrough.ipynb
+++ b/ETL Walkthrough.ipynb
@@ -14,18 +14,20 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-24T22:08:13.050615Z",
-     "start_time": "2025-03-24T22:08:13.046758Z"
+     "end_time": "2025-03-25T07:56:58.959108Z",
+     "start_time": "2025-03-25T07:56:58.954692Z"
     }
    },
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import zipfile\n",
+    "import os"
    ],
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -46,8 +48,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T22:08:13.071992Z",
-     "start_time": "2025-03-24T22:08:13.069034Z"
+     "end_time": "2025-03-25T07:57:01.836910Z",
+     "start_time": "2025-03-25T07:57:01.742401Z"
     }
    },
    "cell_type": "code",
@@ -59,15 +61,15 @@
    ],
    "id": "b76f813b",
    "outputs": [],
-   "execution_count": 52
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "9e39c8552086aed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T22:08:13.257361Z",
-     "start_time": "2025-03-24T22:08:13.171631Z"
+     "end_time": "2025-03-25T07:57:02.905040Z",
+     "start_time": "2025-03-25T07:57:02.811394Z"
     }
    },
    "source": [
@@ -227,38 +229,47 @@
        "</div>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "97fe8d54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T22:08:19.808576Z",
-     "start_time": "2025-03-24T22:08:13.381987Z"
+     "end_time": "2025-03-25T07:57:10.616180Z",
+     "start_time": "2025-03-25T07:57:04.384955Z"
     }
    },
    "source": [
     "#Fetching share prices using the PymSimFin Object - get_share_prices method\n",
+    "zip_path = \"data/raw/us-shareprices-daily.csv.zip\"\n",
+    "extract_to = \"data/raw/\"\n",
+    "\n",
+    "# Unzip the file if not already extracted\n",
+    "csv_file = os.path.join(extract_to, \"us-shareprices-daily.csv\")\n",
+    "if not os.path.exists(csv_file):\n",
+    "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(extract_to)\n",
+    "\n",
     "shareprices_df = pd.read_csv('./data/raw/us-shareprices-daily.csv', sep=';', parse_dates=['Date'], index_col=0)\n",
     "shareprices_df = shareprices_df[shareprices_df.index=='TSLA']\n",
     "shareprices_df = shareprices_df.set_index('Date', drop=True)"
    ],
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "c7e2d42d243c4744",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T22:08:19.846786Z",
-     "start_time": "2025-03-24T22:08:19.841394Z"
+     "end_time": "2025-03-25T07:57:20.262685Z",
+     "start_time": "2025-03-25T07:57:20.255022Z"
     }
    },
    "source": [
@@ -286,7 +297,7 @@
      ]
     }
    ],
-   "execution_count": 55
+   "execution_count": 5
   },
   {
    "cell_type": "code",
