--- a/ETL Walkthrough.ipynb
+++ b/ETL Walkthrough.ipynb
@@ -14,8 +14,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-25T07:56:58.959108Z",
-     "start_time": "2025-03-25T07:56:58.954692Z"
+     "end_time": "2025-03-25T08:46:16.044420Z",
+     "start_time": "2025-03-25T08:46:16.040765Z"
     }
    },
    "source": [
@@ -24,10 +24,11 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import zipfile\n",
+    "import sys\n",
     "import os"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -48,28 +49,30 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-25T07:57:01.836910Z",
-     "start_time": "2025-03-25T07:57:01.742401Z"
+     "end_time": "2025-03-25T08:47:41.673022Z",
+     "start_time": "2025-03-25T08:47:41.570816Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#We create the object from the previously defined Class PySimFin\n",
+    "base_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "sys.path.append(os.path.join(base_path, \"src\"))\n",
     "from pysimfin import PySimFin\n",
     "\n",
     "pymsimfin = PySimFin()"
    ],
    "id": "b76f813b",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "9e39c8552086aed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-25T07:57:02.905040Z",
-     "start_time": "2025-03-25T07:57:02.811394Z"
+     "end_time": "2025-03-25T08:48:01.570111Z",
+     "start_time": "2025-03-25T08:48:01.474362Z"
     }
    },
    "source": [
@@ -229,20 +232,20 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "97fe8d54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-25T07:57:10.616180Z",
-     "start_time": "2025-03-25T07:57:04.384955Z"
+     "end_time": "2025-03-25T08:48:10.954703Z",
+     "start_time": "2025-03-25T08:48:02.773200Z"
     }
    },
    "source": [
@@ -261,7 +264,7 @@
     "shareprices_df = shareprices_df.set_index('Date', drop=True)"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -803,8 +806,8 @@
    "id": "212948eab00d9a84",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-24T22:08:22.924106Z",
-     "start_time": "2025-03-24T22:08:22.916977Z"
+     "end_time": "2025-03-25T08:48:32.351077Z",
+     "start_time": "2025-03-25T08:48:32.151070Z"
     }
    },
    "source": [
@@ -818,14 +821,18 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training samples: 992, Testing samples: 249\n"
+     "ename": "NameError",
+     "evalue": "name 'X2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[9], line 5\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_selection\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m train_test_split\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m#Separating Training and Test Data\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m# 80% training, 20% testing\u001B[39;00m\n\u001B[0;32m----> 5\u001B[0m X_train, X_test, y_train, y_test \u001B[38;5;241m=\u001B[39m train_test_split(X2, y, test_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.2\u001B[39m, random_state\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m42\u001B[39m)\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTraining samples: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mX_train\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, Testing samples: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mX_test\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'X2' is not defined"
      ]
     }
    ],
-   "execution_count": 66
+   "execution_count": 9
   },
   {
    "cell_type": "code",
